k8s/manifests/whoami/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: demo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.greedo.net`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls: {}
